--- a/index.html
+++ b/index.html
@@ -3,9 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Primeiro Site</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Projeto de Vida</title>
 </head>
 <body>
-    <h1> credo ana </h1>
+    <section>
+    <h2 class="titulo-principal">Meus Objetivos do ano_</h2>
+    <div>
+        <div>
+            <button>Zerar um jogo</button>
+            <button>Pagar uma viajem</button>
+            <button>Passar de ano_/button>
+            <button>Montar um Setup</button>
+        </div>
+    </div>
+</section>  
 </body>
 </html>
